# serde-tuplex

./: .gitignore  Cargo.toml  README.md
serde-tuplex-derive/: Cargo.toml  README.md
serde-tuplex-derive/src/: analysis.rs  deserialize.rs  lenient.rs  lib.rs  serialize.rs
src/: de.rs  internal.rs  lib.rs
tests/: integration.rs  lenient_derive.rs  lenient_functions.rs  lenient_value.rs  tuple_derive.rs  tuple_lenient_derive.rs
