[package]
name = "serde-tuplex-derive"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for serde-tuplex"
repository = "https://github.com/Arasple/serde-tuplex"
license = "MIT"
keywords = ["serde", "derive", "macro", "tuple"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.109", features = ["full", "extra-traits"] }
